--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,3 +6,14 @@
 html {
     font-size: 62.5%;
 }
+header {
+    width: 100%;
+    height: 75px;
+    position: absolute;
+}
+main {
+    background-image: url();
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
