--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,7 @@ main .main__contenedor {
     border-radius: 30px;
     display: flex;
     min-width: 655px;
+    max-width: 1160px;
 }
 .main__contenedor .contenedor__logico {
     background-color: white;
@@ -70,6 +71,8 @@ main .main__contenedor {
     border-bottom-left-radius: 30px;
     padding: 15px;
     width: 50%;
+    max-width: 582px;
+    min-width: 300px;
 }
 .contenedor__logico .logico__titulos {
     display: flex;
@@ -93,7 +96,6 @@ main .main__contenedor {
     font-weight: 200;
     font-size: 1.4rem;
 }
-
 .contenedor__logico .logico__sentencias {
     display: flex;
     flex-direction: column;
@@ -183,7 +185,6 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
-
 .main__contenedor .contenedor__respuestas {
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
@@ -193,3 +194,4 @@ input:checked + .slider:before {
     max-width: 582px;
     min-width: 300px;
 }
+
