--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,6 +184,32 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+.contenedor__botones {
+    position: relative;
+    width: 100%;
+}
+
+.contenedor__botones .botones{
+    position: absolute;
+    padding: 10px;
+    background-color: #4488dd;
+    border-radius: 10px;
+    border: 1px solid #3776c2;
+    color: whitesmoke;
+    font-size: 1.4rem;
+    font-weight: 300;
+    width: 74px;
+}
+.contenedor__botones .botones:hover {
+    background-color: #4d94eb;
+    font-size: 1.5rem;
+}
+.contenedor__botones #ejecutar{
+    left: calc(60%);
+}
+.contenedor__botones #limpiar{
+    left: calc(30%);
+}
 
 .main__contenedor .contenedor__respuestas {
     border-top-right-radius: 30px;
