--- a/CSS/style.css
+++ b/CSS/style.css
@@ -273,6 +273,8 @@ input:checked + .slider:before {
     border-radius: 15px;
     padding: 10px;
     margin-top: 10px;
+    font-size: 1.8rem;
+    font-weight: 300;
 }
 .contenedor__respuestas .respuesta__pasos {
     width: 100%;
@@ -298,6 +300,8 @@ input:checked + .slider:before {
     border-radius: 15px;
     padding: 10px;
     margin-top: 10px;
+    font-size: 1.8rem;
+    font-weight: 300;
 }
 .contenedor__botones #limpiarAll {
     width: 125px;
